feat(user): implement user model (#1)
* Moved database to api project
* Added references
* Added initial fields
* Added connection string to database
* Added initial user migration

--- a/Source.net.api/appsettings.json
+++ b/Source.net.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=source_net;Trusted_Connection=true;MultipleActiveResultSets=true;ConnectRetryCount=0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
