feat(user): implement jwt auth (#2)
* Add jwt to headers
* Add jwt to start up and define schema
* Configure keys for token
* Add missing fields to user
* Add new migration for new fields
* Added role to user
* Added role enum
* Changed startup from docker to debug as docker did not work
* Added token managment options
* Declare context public
* Add user repository
* Add user repository implementation
* Add login request
* Add interface for jwt auth
* Implement JWT auth logic
* Add endpoint and implementation to controller to generate token

--- a/Source.net.api/appsettings.json
+++ b/Source.net.api/appsettings.json
@@ -7,5 +7,12 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "tokenManagement": {
+    "secret": "{wYyKV}g9`}7VsB<+21<j+])ljN_T9/3wT5BA'z<)K6)M-8ukz3xSX|?_^@9Oy.",
+    "issuer": "source.net",
+    "audience": "users",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  }
 }
