Implement user crud (#3)
* feat(user): add register endpoint

* Implement register endpoint for users in controller
* Add Mapper for user with functionalities
* Add injection in startup.cs
* Add User service interface and implementation
* Add request for regsiter
* Add save function to repository
* Add User View to display only requuired user data

* fix(user): huge rework on authentication

* Added new project to handle database service and all similarities
* Create new enpoint in user controller to get current user
* Added service defnition and implementation for get me
* Moved migrations, db context, repositories, services, mappers to project services
* Created RoleMapper and swapped method getRole with mapper
* Added new classes to startup
* Remove requests
* Setup Dtos to be new request models
* Rework auth logic by adding new claims
* Fix namespaces

* feat(user): implement update functionallity

* Added repository methods to support update of basic fields
* Added new exception for faulty reqeust
* Added Error Filter to prettify json response on exception
* Added new update  methods to user service and implementation
* Added UpdateUserDto and base validation
* Added endpoint to controller
* New User mapper method
:

* feat(user): enable role and password update

* Added password update dto
* Added logic to update passwords
* Added password update endpoint
* Added dto for changing roles
* Added endpoint for roles
* Added security for endpoint to ensure onlt SA can change role
* Added methods to handle update on service

* feat(user): add new field and migrations

* Remove old migrations and create one initial for user migration
* Add new field for user to set user deleted
* Add modification on startup and context to worl

* feat(user): implement delete logic in controller

* Fixed logic to work better with the role schema
* Allow admin all
* Restrict user action
* Enable User delete/restore
* Added missing

--- a/Source.net.api/Source.net.api.csproj
+++ b/Source.net.api/Source.net.api.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -20,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Source.net.services\Source.net.services.csproj" />
   </ItemGroup>
 
 </Project>
