--- a/Source.net.api/appsettings.json
+++ b/Source.net.api/appsettings.json
@@ -14,5 +14,16 @@
     "audience": "users",
     "accessExpiration": 30,
     "refreshExpiration": 60
+  },
+  "Swagger": {
+    "Contact": {
+      "Email": "mirsad.halilcevic@edu.fit.ba",
+      "Name": "Mirsad H.",
+      "Url": "https://linkedin.com/in/mirsad-halilcevic"
+    },
+    "License": {
+      "Name": "MIT",
+      "Url": "https://opensource.org/licenses/MIT"
+    }
   }
 }
