--- a/Source.net.api/Source.net.api.csproj
+++ b/Source.net.api/Source.net.api.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Source.net.infrastructure\Source.net.infrastructure.csproj" />
     <ProjectReference Include="..\Source.net.services\Source.net.services.csproj" />
   </ItemGroup>
 
