--- a/Source.net.services/Source.net.services.csproj
+++ b/Source.net.services/Source.net.services.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Source.net.infrastructure\Source.net.infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
