--- a/Source.net.desktop/Source.net.desktop.csproj
+++ b/Source.net.desktop/Source.net.desktop.csproj
@@ -84,8 +84,13 @@
     <Compile Include="Categories\CategoryForm.Designer.cs">
       <DependentUpon>CategoryForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Post\PostForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Post\PostForm.Designer.cs">
+      <DependentUpon>PostForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Post\PostGridItem.cs" />
-    <Compile Include="Post\PostHttpClient.cs" />
     <Compile Include="Post\PostsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,7 +99,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shared\ObjectUrlEncoder.cs" />
     <Compile Include="Shared\HttpClient.cs" />
     <Compile Include="Shared\Index.cs">
       <SubType>Form</SubType>
@@ -138,6 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Categories\CategoryForm.resx">
       <DependentUpon>CategoryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Post\PostForm.resx">
+      <DependentUpon>PostForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Post\PostsForm.resx">
       <DependentUpon>PostsForm.cs</DependentUpon>
