feat(posts): add validation and misc tweaks (#15)
* Fix filtering bugs

* Add safety checks and try catches
* Add validation to psot form
* Add image encoder and decoder class

Co-authored-by: sixaphone <mirsad@meta5.io>

--- a/Source.net.desktop/Source.net.desktop.csproj
+++ b/Source.net.desktop/Source.net.desktop.csproj
@@ -99,7 +99,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Base64ImageEncoder.cs" />
     <Compile Include="Shared\HttpClient.cs" />
+    <Compile Include="Shared\ImageEncoder.cs" />
     <Compile Include="Shared\Index.cs">
       <SubType>Form</SubType>
     </Compile>
