chore: add database

--- a/Source.net.api/appsettings.json
+++ b/Source.net.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=source_netNew;Trusted_Connection=true;MultipleActiveResultSets=true;ConnectRetryCount=0"
+    "DefaultConnection": "Server=.;Database=source_net;Trusted_Connection=true;MultipleActiveResultSets=true;ConnectRetryCount=0"
   },
   "Logging": {
     "LogLevel": {
